add category renaming, test and update openapi
